# dbus-bytestream

./: .travis.yml  Cargo.toml  README.md
doc/: search-index.js
doc/dbus_bytestream/: index.html  sidebar-items.js  stability.html  stability.json
doc/dbus_bytestream/addr/: enum.AddressError.html  enum.UnescapeError.html  index.html  sidebar-items.js  type.ServerAddressError.html
doc/dbus_bytestream/address/: enum.Error.html  enum.UnescapeError.html  sidebar-items.js  type.ServerAddressError.html
doc/dbus_bytestream/connection/: enum.Error.html  index.html  sidebar-items.js  struct.Connection.html
doc/dbus_bytestream/demarshal/: enum.DemarshalError.html  fn.demarshal.html  fn.get_alignment.html  index.html  sidebar-items.js
doc/dbus_bytestream/marshal/: fn.pad_to_multiple.html  index.html  sidebar-items.js  trait.BasicMarshal.html  trait.Marshal.html
doc/dbus_bytestream/message/: constant.FLAGS_NO_REPLY_EXPECTED.html  constant.HEADER_FIELD_DESTINATION.html  constant.HEADER_FIELD_ERROR_NAME.html  constant.HEADER_FIELD_INTERFACE.html  constant.HEADER_FIELD_INVALID.html  constant.HEADER_FIELD_MEMBER.html  enum.HeaderFieldName.html  (+21 more)
doc/dbus_serialize/: index.html  sidebar-items.js  stability.html  stability.json
doc/unix_socket/: enum.AddressKind.html  index.html  sidebar-items.js  struct.Incoming.html  struct.SocketAddr.html  struct.UnixDatagram.html  struct.UnixListener.html  struct.UnixStream.html
src/: address.rs  connection.rs  demarshal.rs  lib.rs  marshal.rs  message.rs
src/dispatch/: message_types.rs  mod.rs  wrapper.rs
test/: test.conf  test.sh
(+54 files in other folders)
