[package]
name = "dbus-bytestream"
license = "LGPL-2.1"
description = "Native D-Bus implementation"
repository = "https://github.com/srwalter/dbus-bytestream.git"
version = "0.1.0"
authors = ["Steven Walter <stevenrwalter@gmail.com>"]

[dependencies.dbus-serialize]
git = "https://github.com/srwalter/dbus-serialize.git"

[dependencies]
unix_socket = "0.4.3"
rustc-serialize = "0.3"
libc = "0.1"
