[package]
name = "dbus-bytestream"
license = "LGPL-2.1"
description = "Native D-Bus implementation"
repository = "https://github.com/srwalter/dbus-bytestream.git"
documentation = "http://srwalter.github.io/dbus-bytestream/doc/dbus_bytestream/connection/index.html"
version = "0.1.4"
authors = ["Steven Walter <stevenrwalter@gmail.com>"]

[dependencies]
unix_socket = "0.4.3"
rustc-serialize = "0.3"
libc = "0.2"
dbus-serialize = "0.1"
rand = "0.3"
rust-crypto = "0.2.31"
